--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
-  "name": "backend",
+  "name": "2-express-server",
   "version": "1.0.0",
+  "description": "",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -9,11 +10,12 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
   "dependencies": {
-    "express": "^4.19.2"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "pg": "^8.11.3"
   },
   "devDependencies": {
-    "nodemon": "^3.1.3"
+    "nodemon": "^3.0.1"
   }
 }
